increased width of subsubmenu li to prevent text cutoff

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -416,7 +416,7 @@ a.red:active {
 .subsubmenu li {
 	margin-left: 15px;
 	padding: 2px 0;
-	width: 160px;
+	width: 165px;
 	font-size: 11px;
 	font-weight: normal;
 	overflow-x: hidden;
